--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,22 @@ h1 {
 
 h2 {
   font-style: italic;
-  color: black;
+  color: white;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 p {
-  color: black;
+  color: white;
   text-align: left;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 a{
   color:darkslateblue;
